Bug 1049198 - Camera/Video should use mark Color layer as [not visible] when covered by video

--- a/apps/camera/style/app.css
+++ b/apps/camera/style/app.css
@@ -6,7 +6,6 @@ body {
   width: 100%;
   padding: 0;
   margin: 0;
-  overflow: hidden;
 }
 
 body {
