--- a/apps/camera/style/viewfinder.css
+++ b/apps/camera/style/viewfinder.css
@@ -18,7 +18,7 @@
   justify-content: center;
   overflow: hidden;
   opacity: 0.001; /* 1 */
-  will-change: opacity; /* 2 */
+  /*will-change: opacity;*/ /* 2 */
   transition: opacity 360ms ease-in-out;
 }
 
@@ -76,7 +76,6 @@
   max-height: 100%; /* 1 */
   justify-content: center;
   align-items: center;
-  overflow: hidden;
 }
 
 /** Video Container
